[bug fixing]: fix carousel indicators contrast and images display

--- a/assets/style.css
+++ b/assets/style.css
@@ -92,12 +92,6 @@ body {
   font-size: 14px;
 }
 
-.gallery {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(304px, 1fr));
-  gap: 1em;
-}
-
 .gallery-item {
   width: 100%;
   max-width: 304px;
